# story_cli

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md
docs/: README.md  character-guide.md  installation.md  llm-setup.md  story-guide.md
specs/001-story-cli-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-story-cli-core/checklists/: requirements.md
specs/001-story-cli-core/contracts/: services.md
specs/002-docs-html-guide/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-docs-html-guide/checklists/: requirements.md
story_cli/: __init__.py  __main__.py
story_cli/cli/: __init__.py  character_cmd.py  chat_cmd.py  init_cmd.py  main.py  open_cmd.py
story_cli/models/: __init__.py  character.py  enums.py  exceptions.py  project.py  relationship.py
story_cli/prompts/: __init__.py  character_prompts.py
story_cli/services/: __init__.py  character_service.py  llm_service.py  project_service.py
story_cli/utils/: __init__.py  config.py  display.py  validation.py
story_cli/workflows/: __init__.py
test/: story.json
test/story_data/: characters_index.json
test/story_data/characters/marc/: description.json
tests/: __init__.py  conftest.py
