[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "story-cli"
version = "0.1.0"
description = "AI-Powered Visual Novel Story Builder - Terminal-based creative writing assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Story CLI Team" }
]
keywords = ["cli", "visual-novel", "creative-writing", "llm", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
story = "story_cli.cli.main:app"

[project.urls]
Homepage = "https://github.com/journeadrien/story_cli"
Repository = "https://github.com/journeadrien/story_cli"

[tool.hatch.build.targets.wheel]
packages = ["story_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
